--- a/css/style.css
+++ b/css/style.css
@@ -9,119 +9,180 @@ font-family: 'Noto Sans KR', sans-serif;
 font-family: 'Handel Gothic';
  */
 
- /*latout*/
- body {
+/*latout*/
+body {
   font-family: 'Noto Sans KR', sans-serif;
-  font-size: 14px; color: #333;
- }
+  font-size: 14px;
+  color: #333;
+}
 
- .en {  font-family: 'Handel Gothic'; }
- .en_s {font-family: 'Dancing Script', cursive;}
+.en {
+  font-family: 'Handel Gothic';
+}
 
- .clearfix::after {
-  content:"";
+.en_s {
+  font-family: 'Dancing Script', cursive;
+}
+
+.clearfix::after {
+  content: "";
   display: block;
   clear: both;
- }
+}
 
- /* header */
- header {}
- .innerheader{
+/* menuOpen */
+.menuOpen {
+  position: fixed;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 30px 22px;
+}
+
+.menuOpen .open {
+  background: none;
+  border: none;
+  /* border: 0; */
+}
+
+.menuOpen .open::before {
+  content: "";
+  position: absolute;
+  right: -100px;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #f5f5f5;
+  z-index: -1;
+  transition: 0.3s;
+}
+
+.menuOpen .open:hover::before {
+  right: 0;
+  cursor: pointer;
+}
+
+/* header */
+header {}
+
+.innerheader {
   max-width: 1720px;
   margin: 0 auto;
   height: 110px;
   line-height: 110px;
- }
+}
 
- .innerheader .logo {
+.innerheader .logo {
   float: left;
- }
- .innerheader .logo a{
+}
+
+.innerheader .logo a {
   display: block;
   width: 100%;
   height: 100%;
- }
- .innerheader .logo a img{}
+}
 
- .innerheader .mainmenu {
+.innerheader .logo a img {}
+
+.innerheader .mainmenu {
   float: right;
- }
- .innerheader .mainmenu .gnb{
-  float: left;
- }
- .innerheader .mainmenu .gnb li{
-  float: left;
-  margin: 0 20px;
- }
- .innerheader .mainmenu .gnb li a{
-  display: block;
-  color: #555;
- }
+}
 
- .innerheader .mainmenu .sns {
+.innerheader .mainmenu .gnb {
   float: left;
-  margin-left: 300px;
- }
- .innerheader .mainmenu .sns li{
+}
+
+.innerheader .mainmenu .gnb li {
   float: left;
   margin: 0 20px;
 }
- .innerheader .mainmenu .sns li a{
+
+.innerheader .mainmenu .gnb li a {
+  display: block;
+  color: #555;
+}
+
+.innerheader .mainmenu .sns {
+  float: left;
+  margin-left: 300px;
+}
+
+.innerheader .mainmenu .sns li {
+  float: left;
+  margin: 0 20px;
+}
+
+.innerheader .mainmenu .sns li a {
   display: block;
   padding: 0 10px;
- }
- .innerheader .mainmenu .sns li a img{}
+}
 
- /* visual */
- .visual {
+.innerheader .mainmenu .sns li a img {}
+
+/* visual */
+.visual {
   max-width: 1720px;
   margin: 0 auto;
- }
- .visual .mainImg{
+}
+
+.visual .mainImg {
   float: left;
   width: 50%;
- }
- .visual .mainImg img {
+}
+
+.visual .mainImg img {
   width: 90%;
- }
- .visual .mainTxt{
+}
+
+.visual .mainTxt {
   float: left;
   width: 50%;
   margin-top: 180px;
- }
- .visual .mainTxt .tit {
+}
+
+.visual .mainTxt .tit {
   font-size: 72px;
- }
- .visual .mainTxt .tit {}
- .visual .mainTxt .tit span.gray{
+}
+
+.visual .mainTxt .tit {}
+
+.visual .mainTxt .tit span.gray {
   color: #ccc;
- }
- .visual .mainTxt .txt{
+}
+
+.visual .mainTxt .txt {
   padding: 50px 0 0 70px;
- }
+}
 
 /* jurnal */
 section.jurnal {
   position: relative;
   padding: 190px 0 120px;
 }
-section.jurnal .scroll{
+
+section.jurnal .scroll {
   position: absolute;
-  left: 50%; top: 0;
+  left: 50%;
+  top: 0;
   transform: translateX(-50%);
-  font-size: 10px; /* font-size가 10보다 작아질순 없다. 0은가능 */
+  font-size: 10px;
+  /* font-size가 10보다 작아질순 없다. 0은가능 */
   letter-spacing: 5px;
   text-transform: uppercase;
   writing-mode: vertical-rl;
   padding-top: 90px;
 }
-section.jurnal .scroll::before{
+
+section.jurnal .scroll::before {
   content: "";
   position: absolute;
-  height: 75px; width: 1px;
+  height: 75px;
+  width: 1px;
   background-color: #333;
-  top: 0; left: 6px;
+  top: 0;
+  left: 6px;
 }
+
 section.jurnal .box .img {
   padding-top: 100px;
 }
@@ -131,20 +192,24 @@ section.jurnal .box ul {
   padding-top: 40px;
   margin-top: 40px;
 }
-section.jurnal .box ul li{
+
+section.jurnal .box ul li {
   overflow: hidden;
   margin-bottom: 30px;
 }
-section.jurnal .box ul li h3{
+
+section.jurnal .box ul li h3 {
   float: left;
   width: 22%;
   font-size: 15px;
 }
-section.jurnal .box ul li p{
+
+section.jurnal .box ul li p {
   float: left;
   width: 78%;
   color: #888;
 }
+
 section.jurnal .moreBtn {
   margin-left: 22%;
 }
@@ -161,6 +226,7 @@ section .inner {
   margin: 0 auto;
   overflow: hidden;
 }
+
 section .inner .box {
   float: left;
   width: 50%;
@@ -178,19 +244,21 @@ section .inner .box {
 
 
 
- 
 
- /* 타이틀, 텍스트 */
 
- .tit {
+/* 타이틀, 텍스트 */
+
+.tit {
   font-size: 50px;
   line-height: 1.1;
   font-weight: normal;
- }
+}
+
 .tit span {
   display: block;
 }
-.tit span b{
+
+.tit span b {
   font-weight: normal;
 }
 
@@ -204,30 +272,37 @@ section .inner .box {
   line-height: 1.6;
   margin-bottom: 10px;
 }
+
 .txt p b {
   font-weight: normal;
 }
+
 .moreBtn {
   position: relative;
   display: inline-block;
   color: #333;
   margin-top: 20px;
   padding-left: 45px;
-  transform: skewX(-15deg) translateX(5px); /*degree(각도)*/
+  transform: skewX(-15deg) translateX(5px);
+  /*degree(각도)*/
   transition: 0.3s;
 }
+
 .moreBtn:hover {
   transform: skewX(0deg) translateX(0px);
   font-weight: bold;
 }
+
 .moreBtn::before {
   content: "";
   width: 42px;
   height: 1px;
   background-color: #333;
   position: absolute;
-  left: 0; top: 52%;
+  left: 0;
+  top: 52%;
 }
+
 /* end 타이틀, 텍스트 */
 
 /* 이미지애니메이션 */
@@ -235,60 +310,89 @@ section .inner .box {
   position: relative;
   animation: imgAni 1s;
 }
-@keyframes imgAni{
-  0%{transform: translateY(50px);}
-  100%{transform: translateY(0px);}
+
+@keyframes imgAni {
+  0% {
+    transform: translateY(50px);
+  }
+
+  100% {
+    transform: translateY(0px);
+  }
 }
+
 .img.animate__motion::after {
   content: "";
   position: absolute;
-  left: 0; top: 0;
-  height: 0%; width: 100%;
+  left: 0;
+  top: 0;
+  height: 0%;
+  width: 100%;
   background-color: #fff;
   animation: mask 1.2s;
 }
-@keyframes mask{
-  0%{height: 90%;}
-  100%{height: 0;}
+
+@keyframes mask {
+  0% {
+    height: 90%;
+  }
+
+  100% {
+    height: 0;
+  }
 }
 
 /* end 이미지애니메이션 */
 
 /* 텍스트 애니메이션 */
 .tit.animate__motion {}
-.tit.animate__motion span{
+
+.tit.animate__motion span {
   overflow: hidden;
 }
-.tit.animate__motion span b{
+
+.tit.animate__motion span b {
   display: block;
   animation: textAni 1.3s;
 }
-.txt.animate__motion p{
+
+.txt.animate__motion p {
   overflow: hidden;
 }
-.txt.animate__motion p b{
+
+.txt.animate__motion p b {
   display: block;
   animation: textAni 2s;
 }
 
-@keyframes textAni{
-  0%{opacity: 0;}
-  30%{
-    opacity: 0; 
+@keyframes textAni {
+  0% {
+    opacity: 0;
+  }
+
+  30% {
+    opacity: 0;
     transform: translateY(40px) skewY(8deg);
-    transform-origin: left top;}
+    transform-origin: left top;
+  }
 }
 
 /*  end 텍스트 애니메이션 */
 
 /* svg */
 .circleBox {}
-.circleBox .svgAni{}
-.circleBox .svgAni path{
-  stroke-dasharray: 3000px;
-  
+
+.circleBox .svgAni {}
+
+.circleBox .svgAni path {
+  stroke-dasharray: 5995px;
+  stroke-dashoffset: 0;
+
 }
-.circleBox:hover .svgAni path {}
+
+.circleBox.animate__motion .svgAni path {
+  animation: dash 1.5s;
+}
 
 section.jurnal .circleBox {
   position: absolute;
@@ -296,4 +400,89 @@ section.jurnal .circleBox {
   right: 13%;
   top: 100px;
   z-index: -1;
+}
+
+@keyframes dash {
+  0% {
+    stroke-dashoffset: 5995px;
+  }
+
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+
+/* 미디어쿼리 -- 반응형 */
+@media (max-width:1720px) {
+  .innerheader {
+    max-width: 100%;
+    padding: 0 30px;
+    box-sizing: border-box;
+  }
+
+  .innerheader .mainmenu .sns {
+    margin-left: 200px;
+  }
+
+  .visual .mainTxt {
+    margin-top: 150px;
+  }
+
+  .visual .mainTxt .tit {
+    font-size: 62px;
+  }
+}
+
+@media (max-width:1400px) {
+  .innerheader .mainmenu .sns li {
+    margin: 0 5px;
+  }
+
+  .visual .mainTxt {
+    margin-top: 100px;
+  }
+
+  .visual .mainTxt .tit {
+    font-size: 46px;
+  }
+
+  .visual .mainTxt .txt {
+    padding: 20px 0px 0px 0px;
+  }
+
+  .img.img img {
+    width: 100%;
+  }
+
+  /* .img img 
+    width: 100% !important; */
+
+section .inner {
+  width: 100%;
+  padding: 0 30px;
+  box-sizing: border-box;
+}
+
+section.jurnal {
+  overflow: hidden;
+}
+
+section.jurnal .scroll {
+  display: none;
+}
+
+section.jurnal .circleBox {
+  right: -10%;
+  top: 0;
+}
+
+section.jurnal .box img {
+  width: 90%;
+}
+}
+
+@media (max-width:1024px) {
+  .innerheader {
+    height: 80px;
+    line-height: 80px;}
 }
