--- a/css/style.css
+++ b/css/style.css
@@ -214,8 +214,102 @@ section.jurnal .moreBtn {
   margin-left: 22%;
 }
 
+/* service */
+section.service {
+  padding: 190px 0;
+}
+
+section.service .box {}
+
+section.service .box .img {
+  margin-top: 60px;
+}
+
+section.service .box.design {
+  /* padding, margin의 %(백분율)의 기준은 상하좌우 모두 내 부모의 넓이
+  height:30% --> %의 기준은 부모의 높이 */
+  margin-top: -40%;
+  width: 45%;
+  border-top: 1px solid #c4e5ea;
+  padding-top: 60px;
+}
+
+section.service .box.design .tit {
+  font-size: 30px;
+  line-height: 1.4;
+  margin-bottom: 30px;
+}
+
+/*customer*/
+section.customer {
+  background: url(../img/img_04.jpg) no-repeat center;
+  background-size: cover;
+  text-align: center;
+  padding: 160px 0;
+}
+
+section.customer .tit {
+  color: #fff;
+  font-size: 40px;
+  margin-bottom: 10px;
+}
+
+section.customer .txt {
+  color: #777;
+}
+
+/*team*/
+section.team{
+  position: relative;
+  padding: 190px 0;
+}
+section.team .box.left{
+  text-align: right;
+  padding-right: 80px;
+  box-sizing: border-box;
+}
+section.team .box .tit{margin-top: 40px;}
+section.team .box .txt{margin: 30px 0;}
+section.team .box .img{margin-top: 100px;}
+
+/* footer */
+footer{ 
+  width: 1320px; 
+  margin: 0 auto;
+}
+footer .top{
+  overflow: hidden;
+}
+footer .top .tit{
+  color: #e6e6e6;
+  font-size: 32px;
+  text-align: center;
+  margin-bottom: 40px;
+}
 
 
+footer .bottom{
+  border-top: 1px solid #e6e6e6;
+  padding: 40px 0 100px;
+}
+footer .bottom ul{}
+footer .bottom ul li{
+  float: left;
+  width: 23%;
+  color: #aaa; font-size: 12px;
+  line-height: 2;
+}
+footer .bottom ul li:first-child {
+  width: 31%;
+  font-size: 28px;
+  color: #000;
+  line-height: 1.1;
+  /* line-height의 기본값 1~1.3 */
+}
+footer .bottom ul li b{
+  color: #333;
+  font-weight: normal;
+}
 
 
 
@@ -231,19 +325,6 @@ section .inner .box {
   float: left;
   width: 50%;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 /* 타이틀, 텍스트 */
@@ -402,6 +483,15 @@ section.jurnal .circleBox {
   z-index: -1;
 }
 
+section.team .circleBox{
+  width: 700px;
+  position: absolute;
+  left: 20%;
+  top: -50px;
+  z-index: -1;
+}
+
+
 @keyframes dash {
   0% {
     stroke-dashoffset: 5995px;
@@ -457,32 +547,275 @@ section.jurnal .circleBox {
   /* .img img 
     width: 100% !important; */
 
-section .inner {
-  width: 100%;
-  padding: 0 30px;
-  box-sizing: border-box;
-}
+  section .inner {
+    width: 100%;
+    padding: 0 30px;
+    box-sizing: border-box;
+  }
 
-section.jurnal {
-  overflow: hidden;
-}
+  section.jurnal {
+    overflow: hidden;
+  }
 
-section.jurnal .scroll {
-  display: none;
-}
+  section.jurnal .scroll {
+    display: none;
+  }
 
-section.jurnal .circleBox {
-  right: -10%;
-  top: 0;
-}
+  section.jurnal .circleBox {
+    right: -10%;
+    top: 0;
+  }
 
-section.jurnal .box img {
-  width: 90%;
-}
+  section.jurnal .box img {
+    width: 90%;
+  }
+  footer {
+    width: 100%;
+    padding: 0 30px;
+  }
 }
 
 @media (max-width:1024px) {
   .innerheader {
     height: 80px;
-    line-height: 80px;}
+    line-height: 80px;
+  }
+
+  .innerheader .mainmenu {
+    display: none;
+  }
+
+  .menuOpen {
+    position: absolute;
+    top: 0;
+    transform: none;
+    padding: 10px 20px;
+  }
+
+  .menuOpen .open::before {
+    display: none;
+  }
+
+  .visual .mainImg {
+    float: none;
+    width: 100%;
+  }
+
+  .visual .mainTxt {
+    float: none;
+    width: 100%;
+    margin-top: 50px;
+  }
+
+  section .inner .box {
+    float: none;
+    width: 100%;
+  }
+
+  section.jurnal {
+    padding: 80px 0;
+  }
+
+  section.jurnal .circleBox {
+    top: 200px;
+  }
+
+  section.jurnal .box .img {
+    padding-top: 0;
+    width: 80%;
+    margin: 0 auto 50px;
+  }
+
+  section.service {
+    padding: 80px;
+  }
+
+  section.service .txt {
+    margin-top: 20px;
+  }
+
+  section.service .box .img {
+    margin-top: 50px;
+    width: 70%;
+  }
+
+  section.service .box.design {
+    margin-top: 50px;
+    width: 100%;
+  }
+
+  section.service .box.design .img {
+    width: 70%;
+  }
+
+  section.service .box.design .tit {
+    font-size: 35px;
+  }
+
+  section.customer {
+    padding: 120px 0;
+  }
+
+  section.customer .tit {
+    font-size: 35px;
+  }
+  section.team {
+    padding: 80px 0;
+    overflow: hidden;
+  }
+  section.team .circleBox {
+    left: 15%;
+  }
+  section.team .box .img{
+    margin-top: 70px;
+    width: 70%;
+    float: right;
+  }
+  section.team .box .tit{
+    clear: both;
+  }
+  section.team .box:last-child .img{
+    width: 100%;
+    margin: 50px 0;
+  }
+  section.team .box.left .moreBtn{
+    float: right;
+    margin-right: 5px;
+  }
+  footer .bottom ul li:first-child{
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  footer .bottom ul li{width: 33.3333%;}
+
+}
+
+@media (max-width:767px) {
+  body {
+    font-size: 13px;
+  }
+
+  .innerheader {
+    height: 60px;
+    line-height: 60px;
+  }
+
+  .menuOpen .open img {
+    height: 38px;
+  }
+
+  .visual {
+    padding: 0 20px;
+  }
+
+  .tit.tit.tit {
+    font-size: 30px;
+  }
+
+  section .inner {
+    padding: 0 20px;
+  }
+
+  section.jurnal {
+    padding: 50px 0;
+  }
+
+  section.jurnal .circleBox {
+    top: 10%;
+    right: -4%;
+  }
+
+  section.jurnal .box .img {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+
+  section.jurnal .box img {
+    width: 100%;
+  }
+
+  section.jurnal .box ul {
+    margin-top: 30px;
+  }
+
+  section.jurnal .box ul li {
+    margin-bottom: 20px;
+  }
+
+  section.jurnal .box ul li h3 {
+    width: 100%;
+  }
+
+  section.jurnal .box ul li p {
+    width: 100%;
+    font-size: 12px;
+  }
+
+  section.jurnal .moreBtn {
+    margin-left: 0;
+  }
+
+  section.service {
+    padding: 50px 0;
+  }
+
+  section.service .box .img {
+    margin-top: 30px;
+    width: 100%;
+  }
+
+  section.service .box.design .img {
+    width: 100%;
+  }
+
+  section.service .box.design .tit {
+    font-size: 25px;
+    margin-bottom: 10px;
+  }
+
+  section.customer {
+    padding: 80px 20px;
+  }
+
+  section.customer .tit.tit{
+    font-size: 25px;
+  }
+  section.team{padding: 50px 0;}
+  section.team .circleBox{
+    left: 4%;
+  }
+  section.team .box .txt{
+    margin: 30px 0 10px;
+  }
+  section.team .box .img {
+    margin-top: 50px;
+  }
+  section.team .box:last-child .img{
+    margin-top: 30px;
+  }
+  footer .top .tit{margin-bottom: 30px;}
+  footer .bottom ul li:first-child{
+    font-size: 20px;}
+  footer .bottom ul li{
+    width: 100%; margin-bottom: 12px;}
+
+}
+
+@media (max-width:320px) {
+  .tit .en_s {
+    font-size: 16px;
+  }
+
+  .tit.tit.tit {
+    font-size: 27px;
+  }
+
+  section.jurnal .box ul li h3 {
+    font-size: 14px;
+  }
+
+  section.team .box.left{
+    padding-right: 0;
+  }
+  .moreBtn{font-size: 11px;}
 }
